# lazada-web-testing

./: .env.example  .gitignore  README.md  browsers.json  build.gradle  mise.toml  pom.xml  pyproject.toml  requirements.txt  settings.gradle
extensions/: {2f67aecb-5dac-4f76-9378-0ac4f2bedc9c}.xpi
src/test/kotlin/com/softwaretesting/helper/: CartHelper.kt  DriverFactory.kt  LoginHelper.kt  LoginMethod.kt  OAuthMethod.kt  OtpMethod.kt
src/test/kotlin/com/softwaretesting/lazadawebtesting/: FacebookContinueAsPage.kt  FacebookRegistrationPage.kt  MainPage.kt  MainPageTest.kt  RegistrationPage.kt  RegistrationPageTest.kt
src/test/kotlin/com/softwaretesting/lazadawebtesting/cart/: AddCart.kt  CartPage.kt  CartPageTest.kt  RemoveCart.kt
src/test/kotlin/com/softwaretesting/lazadawebtesting/checkout/: CheckoutPage.kt  CheckoutPageTest.kt
src/test/kotlin/com/softwaretesting/lazadawebtesting/facebook/: FacebookContinueAsPage.kt  FacebookRegistrationPage.kt
src/test/kotlin/com/softwaretesting/lazadawebtesting/login/: LoginPage.kt  LoginPageTest.kt
src/test/kotlin/com/softwaretesting/lazadawebtesting/registration/: RegistrationPage.kt  RegistrationPageTest.kt
src/test/kotlin/com/softwaretesting/lazadawebtesting/search/: SearchTest.kt
src/test/kotlin/com/softwaretesting/lazadawebtesting/update-profile/: UpdateProfile.kt
tests/: conftest.py  facebook.py  test_login.py  test_register.py
tests/helper/: facebook.py
