[tool.poetry]
name = "lazada-web-testing"
version = "0.1.0"
description = ""
authors = ["Dahren Ericsson <dahrenericsson@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
selenium = "^4.27.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
